# art-tracer-phone

./: .gitignore  package-lock.json  package.json  test.sh
agent/: client_logger.ts  index.ts  shims-frida-java.d.ts  tools.ts  tracer.ts  tracer_used_with_emulator.ts
helper/: Makefile  cross_file.txt  helper.cpp  meson.build  meson_options.txt
