option('ndk_toolchain', type : 'string', value : '/home/lavoisier/svn_workspace/wapet/security/fridaDroid_final_project/android_related_tools/ndk-toolchain-phone-arm64', description : 'ndk toolchain created by the user')
option('other_one', type : 'boolean', value : false)
option('combo_opt', type : 'combo', choices : ['one', 'two', 'three'], value : 'three')

